Gpencil: Inverted Fill makes extra stroke at origin (0,0,0) #96790

Closed
opened 2022-03-26 08:07:30 +01:00 by takaaki takeda · 7 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-04 16:11, hash: 295d5c6ef5
Worked: (newest version of Blender that worked as expected)

Short description of error
When filling a closed area with inverted fill tool, an extra stroke is made at origin (0,0,0). (All points at (0,0,0))
Since all points are at the same point, it is invisible for most cases.
But editing individual point reveals its existence, as shown in the GIF animation below.

InvertedFill.gif

Exact steps for others to reproduce the error

  1. Make grease pencil object.
  2. Stroke a closed area.
  3. Fill the area with inverted fill tool.
    (Extra stroke would be made at origin, but it is invisible for most case since all points are at the same position)
  4. Switch to edit mode and edit points at origin.
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-04 16:11, hash: `295d5c6ef5` Worked: (newest version of Blender that worked as expected) **Short description of error** When filling a closed area with inverted fill tool, an extra stroke is made at origin (0,0,0). (All points at (0,0,0)) Since all points are at the same point, it is invisible for most cases. But editing individual point reveals its existence, as shown in the GIF animation below. ![InvertedFill.gif](https://archive.blender.org/developer/F12947876/InvertedFill.gif) **Exact steps for others to reproduce the error** 1. Make grease pencil object. 2. Stroke a closed area. 3. Fill the area with inverted fill tool. (Extra stroke would be made at origin, but it is invisible for most case since all points are at the same position) 4. Switch to edit mode and edit points at origin.
Author

Added subscriber: @popqjp

Added subscriber: @popqjp
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2022-03-26 13:07:09 +01:00

This issue was referenced by 7dd15b7113

This issue was referenced by 7dd15b7113493f002401ee3447a0b52d09889eaf

This issue was referenced by 5eca3278c5

This issue was referenced by 5eca3278c5d7198ce8a13a8f8a54b93456cc4b4f

This issue was referenced by 4039e94422

This issue was referenced by 4039e944223c2242d9551e22a4a313e3df9df628

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96790
No description provided.