Fix T96790: Gpencil Inverted Fill makes extra stroke at origin

The problem was the stroke was created in the inverted loop before checking if the total of points is 0 and exit the loop.

Also some code Cleanup.