source/blender/editors/gpencil/gpencil_fill.c
@@ -2108,18 +2108,18 @@ static bool gpencil_do_frame_fill(tGPDfill *tgpf, const bool is_inverted)
       int totpoints_prv = 0;
       int loop_limit = 0;
       while (totpoints > 0) {
-        /* analyze outline */
+        /* Analyze outline. */
         gpencil_get_outline_points(tgpf, (totpoints == 1) ? true : false);
 
-        /* create array of points from stack */
+        /* Create array of points from stack. */
         totpoints = gpencil_points_from_stack(tgpf);
+        if (totpoints > 0) {
+          /* Create z-depth array for reproject. */
+          gpencil_get_depth_array(tgpf);
 
-        /* create z-depth array for reproject */
-        gpencil_get_depth_array(tgpf);
-
-        /* create stroke and reproject */
-        gpencil_stroke_from_buffer(tgpf);
-
+          /* Create stroke and reproject. */
+          gpencil_stroke_from_buffer(tgpf);
+        }
         if (is_inverted) {
           gpencil_erase_processed_area(tgpf);
         }
